--- a/ui/src/components/cocktail-card/CocktailCard.css
+++ b/ui/src/components/cocktail-card/CocktailCard.css
@@ -1,26 +1,27 @@
-p.main {
-
-}
-
-p.secondary {
-  color: #545353;
+@keyframes fadeOut {
+  0% { opacity: 0;}
+  100% { opacity: 1;width: 95%; }
 }
 
 .cocktail-card {
   position: relative;
   cursor: pointer;
   grid-area: auto;
+  overflow: hidden;
+  animation: fadeOut .300s;
+  animation-fill-mode: forwards;
+  /* transition: width .300s ease-in-out; */
 }
 
 .cocktail-card, img {
   height: 200px;
-  width: 250px;
+  width: 100%;
   border-radius: 7px;
 }
 
 .cocktail-card img {
   display: block;
-  margin: 0 auto;
+  flex-shrink: 0;
 }
 
 .cocktail-card .info-bg, .info {
@@ -29,6 +30,7 @@ p.secondary {
   width: 100%;
   height: 50px;
 }
+
 
 .cocktail-card p {
   padding: 0;
@@ -42,11 +44,10 @@ p.secondary {
 }
 
 .cocktail-card .secondary {
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 20px;
   text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
+  padding: 0px 10px 0px 10px;
 }
 
 .cocktail-card .info-bg {
@@ -58,4 +59,61 @@ p.secondary {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+
+/* Selected styles */
+.cocktail-card.selected-card ul {
+  columns: 2;
+  margin: 0;
+  margin-left: -40px;
+  max-width: 480px;
+  padding-top: 10px;
+}
+
+.cocktail-card li {
+  margin: 0;
+  height: 35px;
+}
+
+
+.cocktail-card.selected-card {
+  transition: width .200s ease-in-out;
+  width: 95%;
+  background-color: white;
+  display: flex;
+  border: 4px solid #4F85EF;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  margin: 0px 10px;
+  /* animation: fadeOut .300s;
+  animation-fill-mode: forwards; */
+  margin-left: -10px;
+}
+
+
+.cocktail-card.selected-card img {
+  border-radius: 7px 0px 0px 7px;
+  margin-left: -3px;
+  width: 230px;
+}
+
+.cocktail-card.selected-card .info {
+  position: relative;
+  margin: 0px 30px 0px 30px;
+  height: 100%;
+  justify-content: inherit;
+}
+
+.cocktail-card.selected-card p {
+  text-align: left;
+}
+
+.cocktail-card.selected-card p.main {
+  font-size: 24px;
+  margin-top: 20px;
+}
+
+.cocktail-card.selected-card .secondary {
+  padding: 0;
 }
