--- a/ui/src/components/header/Header.css
+++ b/ui/src/components/header/Header.css
@@ -6,6 +6,17 @@ html {
   font-family: Roboto;
 }
 
+.main {
+  font-size: 24px;
+}
+
+.secondary {
+  color: #545353;
+  font-size: 14px;
+  font-weight: 200;
+  line-height: 20px;
+}
+
 .header {
   height: 10%;
 }
