--- a/ui/src/components/cocktail-card/CocktailCard.css
+++ b/ui/src/components/cocktail-card/CocktailCard.css
@@ -10,7 +10,7 @@
   overflow: hidden;
   animation: fadeOut .300s;
   animation-fill-mode: forwards;
-  /* transition: width .300s ease-in-out; */
+  transition: width .300s ease-in-out;
 }
 
 .cocktail-card, img {
@@ -68,7 +68,9 @@
   margin: 0;
   margin-left: -40px;
   max-width: 480px;
+  max-height: 140px;
   padding-top: 10px;
+  overflow: hidden;
 }
 
 .cocktail-card li {
@@ -78,13 +80,13 @@
 
 
 .cocktail-card.selected-card {
-  transition: width .200s ease-in-out;
+  /* transition: width .200s ease-in-out; */
   width: 95%;
   background-color: white;
   display: flex;
   border: 4px solid #4F85EF;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  /* transition: all 0.4s cubic-bezier(.25,.8,.25,1); */
   margin: 0px 10px;
   /* animation: fadeOut .300s;
   animation-fill-mode: forwards; */
