--- a/ui/src/components/cocktail-card/CocktailCard.css
+++ b/ui/src/components/cocktail-card/CocktailCard.css
@@ -87,10 +87,15 @@
   border: 4px solid #4F85EF;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   /* transition: all 0.4s cubic-bezier(.25,.8,.25,1); */
-  margin: 0px 10px;
+  /* margin: 0px 10px; */
   /* animation: fadeOut .300s;
   animation-fill-mode: forwards; */
-  margin-left: -10px;
+  /* margin-left: -10px; */
+}
+
+.cocktail-card.disabled img, .cocktail-card.disabled .info {
+  opacity: 0.4;
+  cursor: auto;
 }
 
 
