Add pin-entry flow

--- a/ui/src/components/modal/Modal.css
+++ b/ui/src/components/modal/Modal.css
@@ -14,16 +14,20 @@
 .modal-center {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .modal-center .modal {
+  margin-top: 70px;
   height: 277px;
   width: 287px;
   background-color: #E5E5E5;
   z-index: 1;
   border-radius: 7px;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .modal .header h1 {
