--- a/ui/src/components/header/Header.css
+++ b/ui/src/components/header/Header.css
@@ -12,14 +12,14 @@ html {
 
 .secondary {
   color: #545353;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 200;
   line-height: 20px;
 }
 
-.header {
+/* .header {
   height: 10%;
-}
+} */
 
 .header h1, h2 {
   margin: 0;
