--- a/ui/src/views/settings/Settings.css
+++ b/ui/src/views/settings/Settings.css
@@ -1,3 +1,12 @@
+/* body {
+  margin: 0;
+} */
+
+/* #root {
+  margin: 0 8px 0 8px;
+  height: 100vh;
+} */
+
 #settings .card .icon {
   display: flex;
   justify-content: center;
