--- a/ui/src/components/line-item/LineItem.css
+++ b/ui/src/components/line-item/LineItem.css
@@ -1,14 +1,26 @@
 .line-item {
-  margin-top: 3px;
   background-color: white;
   border-radius: 7px;
   cursor: pointer;
+  padding: 8px;
+}
+
+.line-item + .line-item {
+  margin-top: 5px;
+}
+
+.line-item.selected {
+  border: 3px solid  #4F85EF;
+}
+
+.line-item.small.selected {
+  padding: 5px;
 }
 
 .line-item.large {
-  padding: 10px 40px 10px 40px;
+  padding: 9px 40px;
 }
 
 .line-item p {
-  margin: 5px 0px 5px;
+  margin: 5px 0px;
 }
