--- a/ui/src/components/modal/Modal.css
+++ b/ui/src/components/modal/Modal.css
@@ -27,7 +27,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  justify-content: space-between;
 }
 
 .modal .header h1 {
