--- a/ui/src/components/line-item/LineItem.css
+++ b/ui/src/components/line-item/LineItem.css
@@ -3,10 +3,18 @@
   border-radius: 7px;
   cursor: pointer;
   padding: 8px;
+  display: flex;
 }
 
 .line-item + .line-item {
   margin-top: 5px;
+}
+
+.line-item .icon-spacer {
+  min-width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .line-item.selected {
@@ -18,7 +26,7 @@
 }
 
 .line-item.large {
-  padding: 9px 40px;
+  padding: 9px 0px;
 }
 
 .line-item p {
