--- a/ui/src/views/choose-new-ingredient/ChooseNewIngredient.css
+++ b/ui/src/views/choose-new-ingredient/ChooseNewIngredient.css
@@ -1,22 +1,20 @@
-#choose-new-ingredient .left-panel {
+.left-panel {
   width: 60%;
 }
 
-#choose-new-ingredient .right-panel {
+.right-panel {
   width: 40%;
   padding-top: 50px;
 }
 
-#choose-new-ingredient .panel-container {
+.panel-container {
   display: flex;
   margin-top: 10px;
 }
 
-#choose-new-ingredient .information-panel + .information-panel {
+.information-panel + .information-panel {
   margin-top: 50px;
 }
-
-
 
 
 
