Whole bunch of things, add a simple flask BE, hook up to FE, hardware config, not tested on an rpi yet. commit before my computer is stuck by lighting

--- a/ui/src/components/header/Header.css
+++ b/ui/src/components/header/Header.css
@@ -39,10 +39,16 @@ html {
   font-weight: 200;
 }
 
-.header .icon svg {
+.header .right, .header .left {
   position: absolute;
-  right: 10px;
   cursor: pointer;
+}
+
+.header .right {
+  right: 10px;
+}
+
+.header .icon svg {
   max-height: 25px;
   max-width: 25px;
 }
