Add Ingredient Management view, Add deleting Ingredients, stub out recipe management page, Add back hot-loading, add react-refresh, rework data store a bit

--- a/ui/src/views/cleaning-cycle/CleaningCycle.css
+++ b/ui/src/views/cleaning-cycle/CleaningCycle.css
@@ -12,3 +12,11 @@
 .line-item-table .scrollable .line-item:first-child {
   border-radius:  0px 0px 7px 7px;
 }
+
+#cleaning-cycle .modal-footer {
+  width: 100%;
+}
+
+#cleaning-cycle .modal-footer.completed .progress {
+  margin: 0.5rem 0 0.5rem 0;
+}
