--- a/ui/src/components/with-keyboard/WithKeyboard.css
+++ b/ui/src/components/with-keyboard/WithKeyboard.css
@@ -10,8 +10,10 @@
 #keyboard-container .dismiss-zone {
     height: 52%;
     position: absolute;
-    width: 100%;
     top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 #keyboard-container.open .react-simple-keyboard {
